--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta charset="utf-8">
     <title>chazgie.se</title>
     <link href='https://fonts.googleapis.com/css?family=Karla:400' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheet.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imgs/favicon.gif"/>
     <script>
@@ -38,30 +38,30 @@
 
   <body>
     <section>
-
       <div class="panel panel--top">
         <div class="panel__item">
           <h1>Chaz Giese</h1>
         </div>
         <div class="panel__item panel__item--about">
-          <p>I'm a human practicing design for interactive and traditional mediums.</p>
+          <p>I'm a human practicing design & develoment for interactive mediums.</p>
         </div>
       </div>
-
       <div class="panel panel--bottom">
         <div class="panel__item">
-          <span>Portland, USA</span>
+          <span>Brooklyn, NY</span>
         </div>
         <div class="panel__item panel__item--links">
           <div>
             <a href="mailto:chazgiese@gmail.com">Email</a>,<br>
-            <a href="http://dribbble.com/bootoo" target="_blank">Dribbble</a>,<br>
+            <a href="http://dribbble.com/chazgiese" target="_blank">Dribbble</a>,<br>
             <a href="http://github.com/chazgiese" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
-
     </section>
+    <script>
+      console.log("Oh, hi 👋 I didn't see there.");
+    </script>
   </body>
 
 </html>
